--- a/index-rock-paper.html
+++ b/index-rock-paper.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="./rock-paper.js" defer></script>
+    <title>rock, paper, scissors</title>
 </head>
 <body>
-    <script src="./rock-paper.js"></script>
+    <div class="main">
+        <button id="rock">rock</button>
+        <button id="paper">paper</button>
+        <button id="scissors">scissors</button>
+    </div>
 </body>
 </html>
