--- a/index-rock-paper.html
+++ b/index-rock-paper.html
@@ -8,11 +8,11 @@
     <title>rock, paper, scissors</title>
 </head>
 <body>
-    <div class="main">
+    <div id="main">
         <button id="rock">rock</button>
         <button id="paper">paper</button>
         <button id="scissors">scissors</button>
-
+        <div id = "result"></div>
     </div>
 </body>
 </html>
