--- a/index-rock-paper.html
+++ b/index-rock-paper.html
@@ -4,15 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./rock-paper.css">
     <script src="./rock-paper.js" defer></script>
     <title>rock, paper, scissors</title>
 </head>
 <body>
+    <div class="header">
+        <h1>ROCK, PAPER, SCISSORS!</h1>
+
+    </div>
     <div id="main">
-        <button id="rock">rock</button>
-        <button id="paper">paper</button>
-        <button id="scissors">scissors</button>
-        <div id = "result"></div>
+        <h2>Choose yor weapon:</h2>
+        <div class="card-container">
+            <div class="card">
+                <img src="./img/rock.png" alt="rock">
+                <button id="rock">rock</button>
+            </div>
+            <div class="card">
+                <img src="./img/paper.png" alt="paper">
+                <button id="paper">paper</button>
+            </div>
+            <div class="card">
+                <img src="./img/scissors.png" alt="scissors">
+                <button id="scissors">scissors</button>
+            </div>
+        </div>
+        <div class=""><div id = "result"></div></div>
+    </div>
+    <div class="footer">
+
     </div>
 </body>
 </html>
